--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dirig",
+  "name": "musical_conductor_training",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Robert Jakob <rj@robertjakob.de>",
